# py-xl-sindy

./: pyproject.toml
README_report_25_12_22/: README.html  README.ipynb
README_report_25_12_22/outputs/: compiled_monotonous.csv  irl_v_test.csv  irl_vs_test.csv
README_report_25_12_22/outputs/failed_sindy/: results_a1015d76.json  results_e25fcbc4.json  results_e7db7ca7.json  results_efc07b4b.json
data_collection/: double_pendulum.py
example/: compiled.csv  generate_trajectory.py  irl_v_test.csv  irl_vs_test.csv  minimal_example_real.py  minimal_example_wil.py
src/xlsindy/: simulation.py
test/: results_9b91c79f.json
test/real_test/: results_4a4566a7.json  results_53bb71c5.json  results_8563e391.json  results_9fda0bca.json  results_a04095bb.json  results_fa7040c4.json
