[project]
name = "py-xl-sindy"
version = "2.2.0"
description = "The repository of the py-xl-sindy python package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.3",
    "jax>=0.5.3",
    "matplotlib>=3.10.6",
    "mujoco>=3.4.0",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "tyro>=1.0.0",
]

[[tool.uv.index]]
name="pypinvidia"
url="https://pypi.nvidia.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xlsindy"]


[project.optional-dependencies]
gpu = [
    "cucim-cu12>=25.8.0",
    "cudf-cu12>=24.4.1",
    "cugraph-cu12>=24.4.0",
    "cuml-cu12>=24.4.0",
    "cuvs-cu12>=24.4.0",
    "cuxfilter-cu12>=24.4.1",
    "dask-cudf-cu12>=24.4.1",
    "jax[cuda12]>=0.5.3",
    "nx-cugraph-cu12>=24.4.0",
    "pylibraft-cu12>=24.4.0",
    "raft-dask-cu12>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
util = [
    "ipykernel>=6.30.1",
    "mujoco>=3.3.6",
    "pandas>=2.2.1",
    "seaborn>=0.13.2",
    "tyro>=0.9.32",
]
